# probeinterface

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  LICENSE  README.md  coverage.xml  ex_04_device_channel_indices.py  pyproject.toml  readthedocs.yml  requirements_rtd.txt  requirements_test.txt  setup.py
.github/: python-package.yml
.github/workflows/: copy_probe_features.yml  full_tests.yml  full_tests_codecov.yml  publish-to-pypi.yml  python-package.yml
doc/: api.rst  conf.py  format_spec.rst  generate_format_example.py  index.rst  library.rst  overview.rst  probe_format_example.json  release_notes.rst
doc/img/wiring_references/: ASSY-77>Adpt.A64-Om32_2x-sm-NN>RHD2164.xlsx
doc/releases/: 0.1.0.rst  0.2.0.rst  0.2.1.rst  0.2.10.rst  0.2.11.rst  0.2.12.rst  0.2.13.rst  0.2.14.rst  0.2.15.rst  0.2.16.rst  0.2.17.rst  0.2.18.rst  0.2.19.rst  0.2.2.rst  0.2.20.rst  0.2.21.rst  0.2.22.rst  0.2.23.rst  0.2.24.rst  0.2.25.rst  0.2.26.rst  0.2.27.rst  0.2.28.rst  0.2.29.rst  0.2.3.rst  0.2.4.rst  0.2.5.rst  0.2.6.rst  0.2.7.rst  0.2.8.rst  0.2.9.rst  0.3.0.rst  0.3.1.rst  0.3.2.rst
examples/: README.rst  ex_01_generate_probe_from_sratch.py  ex_02_probe_2d_probe_3d.py  ex_03_generate_probe_bunch.py  ex_03_generate_probe_group.py  ex_04_device_channel_indices.py  ex_04_multi_shank_probe.py  ex_05_device_channel_indices.py  ex_05_import_export_to_file.py  ex_06_import_export_to_file.py  ex_06_probe_generator.py  ex_07_more_plotting_examples.py  ex_07_probe_generator.py  ex_08_more_complicated_probe.py  ex_08_more_plotting_examples.py  ex_09_more_complicated_probe.py  ex_10_get_probe_from_library.py  ex_11_automatic_wiring.py  ex_12_plot_values.py  ex_13_references_for_wiring.py  generate_probe.py  generate_probe_bunch.py
notebooks/: probeinterface_figures.ipynb
probeinterface/: __init__.py  generator.py  io.py  library.py  plotting.py  probe.py  probebunch.py  probegroup.py  shank.py  utils.py  version.py  wiring.py
resources/: fix_openephys_xml_missing_channels.py  generate_cambridgeneurotech_library.py  generate_cambridgeneurotech_libray.py  generate_neuropixel_library.py  generate_neuropixels_library.py  postprocess_neuropixels_probe_features.py  probe.json.schema
resources/wiring_references/: ASSY-116_RHD2132.xlsx  ASSY-156_RHD2164.xlsx  ASSY-77>Adpt.A64-Om32_2x-sm-NN>two_RHD2132.xlsx  ASSY-77>Adpt.A64-Om32_2x-sm-cambridgeneurotech>RHD2164.xlsx  ASSY-77_Adpt.A64-Om32_2x_sm-cambridgeneurotech_two-RHD2132.xlsx  H32>RHD2132.xlsx
ressources/: generate_cambridgeneurotech_libray.py
src/probeinterface/: __init__.py  generator.py  io.py  library.py  neuropixel_tools.py  neuropixels_tools.py  plotting.py  probe.py  probegroup.py  shank.py  testing.py  utils.py  wiring.py
src/probeinterface/resources/: neuropixels_probe_features.json  probe_features.json
src/probeinterface/schema/: probe.json.schema
tests/: conftest.py  dummy.prb  test_generator.py  test_io.py  test_library.py  test_multi_shank.imro  test_neuropixels_backwards_compat.py  test_plotting.py  test_probe.py  test_probebunch.py  test_probegroup.py  test_shank.py  test_utils.py  test_wiring.py  utilities.py
tests/.github/workflows/: publish-to-pypi.yml
tests/OE_5_Neuropix-PXI-multi-probe/: settings.xml
tests/OE_Neuropix-PXI-multi-probe/: settings.xml  settings_2.xml
tests/data/: dummy.prb  mearec_smaller_data.h5  multi_shank_written.imro
tests/data/3brain/: biocam_hw3.0_fw1.6.brw  biocam_hw3.0_fw1.7.0.12_raw.brw
tests/data/imro/: test_non_standard.imro  test_old_probe.imro  test_single_shak_2.0.imro
tests/data/maxwell/: data.raw.h5
tests/data/openephys/OE_0.7_enabled_disabled_Neuropix-PXI/: settings_enabled-enabled.xml
tests/data/openephys/OE_1.0_Neuropix-PXI-multi-probe/: settings.xml
tests/data/openephys/OE_6.7_enabled_disabled_Neuropix-PXI/: settings_enabled-disabled.xml
tests/data/spikegadgets/: SpikeGadgets_test_data_2xNpix1.0_20240318_173658_header_only.rec  SpikeGadgets_test_data_NP2_4shank_20260122_header_only.rec
tests/test_io/: test_3brain.py  test_imro.py  test_io.py  test_maxwell.py  test_mearec.py  test_nwb.py  test_openephys.py  test_spikegadgets.py  test_spikeglx.py
(+27 files in other folders)
