[project]
name = "probeinterface"
version = "0.3.1"
authors = [
  { name="Samuel Garcia", email="sam.garcia.die@gmail.com" },
  { name="Alessio Buccino", email="alessiop.buccino@gmail.com" },
]

description = "Python package to handle probe layout, geometry and wiring to device."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy",
    "packaging",
    "requests"
]

[project.urls]
homepage = "https://github.com/SpikeInterface/probeinterface"
repository = "https://github.com/SpikeInterface/probeinterface"
documentation = "https://probeinterface.readthedocs.io"
changelog = "https://probeinterface.readthedocs.io/en/main/release_notes.html"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build]
sources = ["src"]

[project.optional-dependencies]

test = [
    "jsonschema",
    "pytest",
    "pytest-cov",
    "matplotlib",
    "scipy",
    "pandas",
    "h5py",
    "zarr>=2.16.0,<3.0.0"
]

docs = [
    "pillow",
    "sphinx-gallery",
    "sphinx_rtd_theme",
    "matplotlib==3.2.2",
    "scipy",
    "pandas",
]

[tool.pytest.ini_options]
markers = [
    "library",
]

[tool.coverage.run]
omit = [
    "tests/*",
]


[tool.black]
line-length = 120

[tool.codespell]
# Ref: https://github.com/codespell-project/codespell#using-a-config-file
skip = '.git*,*.pdf,*.svg,data,./doc/releases'
check-hidden = true
# ignore-regex = ''
ignore-words-list = 'compiletime'
